Fix What's New section to still say 7.0 as this text was not updated to contain 7.0.1 things.  Fixed svn link in Hebrew files
git-svn-id: file:///home/awy/mirror/slim/7.0/trunk/platforms@19704 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/win32/Getting Started.he.html
+++ b/win32/Getting Started.he.html
@@ -48,8 +48,8 @@
 <p class="p3">לחץ לחיצה ימנית על סמל שורת המשימות כדי להפסיק או להפעיל את שירות הרקע של SqueezeCenter.
 <p class="p3">אם אתה משתמש ב-iTunes של Apple&rlm;, SqueezeCenter ייבא את פרטי ספריית iTunes שלך באופן אוטומטי. אם אתה משתמש ב-iTunes להוספה או הסרה של פריטי מוסיקה מהספרייה, SqueezeCenter יבחין בכך ויבצע סריקה חוזרת של פרטי השיר.</p>
 
-<a NAME="WhatsNew"><p class="p4">מה חדש בגרסת 7.0.1</p></a>
-<p class="p3">בגרסת 7.0.1 של SqueezeCenter הוטמעו שיפורים רבים. הרשימה שלהלן כוללת רק את השינויים העיקריים שמשפיעים על מה שמוצג על המסך או משנים/משפרים את אופן העבודה עם נגן Squeezebox או Transporter. אם ברצונך בכך, באפשרותך להציג את <a href="http://svn.slimdevices.com/*checkout*/branches/7.0.1/server/Changelog6.html">הרשימה המלאה</span></a> של השינויים.</p>
+<a NAME="WhatsNew"><p class="p4">מה חדש בגרסת 7.0</p></a>
+<p class="p3">בגרסת 7.0 של SqueezeCenter הוטמעו שיפורים רבים. הרשימה שלהלן כוללת רק את השינויים העיקריים שמשפיעים על מה שמוצג על המסך או משנים/משפרים את אופן העבודה עם נגן Squeezebox או Transporter. אם ברצונך בכך, באפשרותך להציג את <a href="http://svn.slimdevices.com/repos/slim/7.0/trunk/server/Changelog7.html">הרשימה המלאה</span></a> של השינויים.</p>
 <ul>
   <li  class="l1">קיים ב-&rlm;7 שפות: אנגלית, גרמנית, צרפתית, ספרדית, איטלקית, הולנדית ועברית, לרבות תוכניות ההתקנה עבור Mac ו-Windows. ייתכן ששפות נוספות יתווספו במהדורות הבאות. אם ברצונך לסייע לנו בתהליכי הלוקליזציה, לרבות תרגום או בדיקת המערכת בשפות שונות, פנה לצוות ההנדסה שלנו בכתובת <a href="mailto:developers@slimdevices.com"><span class="s2">developers@slimdevices.com</span></a>.</li>
   <li  class="l1">שינינו את בקרת עוצמת הקול עבור Squeezebox&rlm;, Squeezebox2 ו-Squeezebox v3 לשימוש בסולם של 0-100.</li>
