Add a What's New section for 7.0.1 in English only, fix svn links to use the tags URL instead of trunk
git-svn-id: file:///home/awy/mirror/slim/7.0/trunk/platforms@19705 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/win32/Getting Started.es.html
+++ b/win32/Getting Started.es.html
@@ -53,7 +53,7 @@
 
 
 <a NAME="WhatsNew"><p class="p4">Novedades en 7.0</p></a>
-<p class="p3">La versi&oacute;n 7.0 de SqueezeCenter contiene cambios importantes, incluido un nombre completamente nuevo. La lista siguiente incluye los cambios clave que afectan a lo que se ve en pantalla, o que cambian o mejoran la interacci&oacute;n con Squeezebox o Transporter. Tambi&eacute;n hay disponible una <a href="http://svn.slimdevices.com/repos/slim/7.0/trunk/server/Changelog7.html"><span class="s2">lista completa</span></a> de cambios.</p>
+<p class="p3">La versi&oacute;n 7.0 de SqueezeCenter contiene cambios importantes, incluido un nombre completamente nuevo. La lista siguiente incluye los cambios clave que afectan a lo que se ve en pantalla, o que cambian o mejoran la interacci&oacute;n con Squeezebox o Transporter. Tambi&eacute;n hay disponible una <a href="http://svn.slimdevices.com/repos/slim/7.0/tags/7.0.1/server/Changelog7.html"><span class="s2">lista completa</span></a> de cambios.</p>
 <ul>
   <li class="l1">El nombre de SlimServer se ha cambiado a SqueezeCenter por coherencia con nuestra nomenclatura de pr&oacute;ximos productos.</li>
   <li class="l1">SqueezeCenter posee una interfaz predeterminada completamente nueva, con una p&aacute;gina de fichas de configuraci&oacute;n que simplifica y hace m&aacute;s precisa la configuraci&oacute;n del equipo. Si prefiere la &quot;vieja escuela&quot;, la interfaz Web predeterminada de SlimServer 6.5.x se llama ahora &quot;Classic&quot; y se puede acceder a ella desde <b>http://<i>ip de servidor</i>:9000/classic</b>.
