--- a/osx/Getting Started.he.html
+++ b/osx/Getting Started.he.html
@@ -44,7 +44,7 @@
 <p class="p3">צוות מערכות המדיה בזרימה של Logitech</p>
 
 <a NAME="WhatsNew"><p class="p4">מה חדש בגרסת 7.0</p></a>
-<p class="p3">בגרסת 7.0 של SqueezeCenter הוטמעו שיפורים רבים. הרשימה שלהלן כוללת רק את השינויים העיקריים שמשפיעים על מה שמוצג על המסך או משנים/משפרים את אופן העבודה עם נגן Squeezebox או Transporter. אם ברצונך בכך, באפשרותך להציג את <a href="http://svn.slimdevices.com/repos/slim/7.0/trunk/server/Changelog7.html">הרשימה המלאה</span></a> של השינויים.</p>
+<p class="p3">בגרסת 7.0 של SqueezeCenter הוטמעו שיפורים רבים. הרשימה שלהלן כוללת רק את השינויים העיקריים שמשפיעים על מה שמוצג על המסך או משנים/משפרים את אופן העבודה עם נגן Squeezebox או Transporter. אם ברצונך בכך, באפשרותך להציג את <a href="http://svn.slimdevices.com/repos/slim/7.0/tags/7.0.1/server/Changelog7.html">הרשימה המלאה</span></a> של השינויים.</p>
 <ul>
   <li  class="l1">קיים ב-&rlm;7 שפות: אנגלית, גרמנית, צרפתית, ספרדית, איטלקית, הולנדית ועברית, לרבות תוכניות ההתקנה עבור Mac ו-Windows. ייתכן ששפות נוספות יתווספו במהדורות הבאות. אם ברצונך לסייע לנו בתהליכי הלוקליזציה, לרבות תרגום או בדיקת המערכת בשפות שונות, פנה לצוות ההנדסה שלנו בכתובת <a href="mailto:developers@slimdevices.com"><span class="s2">developers@slimdevices.com</span></a>.</li>
   <li  class="l1">שינינו את בקרת עוצמת הקול עבור Squeezebox&rlm;, Squeezebox2 ו-Squeezebox v3 לשימוש בסולם של 0-100.</li>
