--- a/win32/Getting Started.de.html
+++ b/win32/Getting Started.de.html
@@ -53,7 +53,7 @@
 
 
 <a NAME="WhatsNew"><p class="p4">Neue Funktionen in 7.0</p></a>
-<p class="p3">SqueezeCenter Version 7.0 enth&auml;lt bedeutende &Auml;nderungen sowie einen brandneuen Namen! Die folgende Liste enth&auml;lt die wichtigsten &Auml;nderungen, die die Anzeige auf dem Bildschirm betreffen oder die Funktionsweise Ihrer Squeezebox oder Ihres Transporter &auml;ndern bzw. verbessern. Eine <a href="http://svn.slimdevices.com/repos/slim/7.0/trunk/server/Changelog7.html"><span class="s2">vollst&auml;ndige Liste</span></a> ist verf&uuml;gbar.</p>
+<p class="p3">SqueezeCenter Version 7.0 enth&auml;lt bedeutende &Auml;nderungen sowie einen brandneuen Namen! Die folgende Liste enth&auml;lt die wichtigsten &Auml;nderungen, die die Anzeige auf dem Bildschirm betreffen oder die Funktionsweise Ihrer Squeezebox oder Ihres Transporter &auml;ndern bzw. verbessern. Eine <a href="http://svn.slimdevices.com/repos/slim/7.0/tags/7.0.1/server/Changelog7.html"><span class="s2">vollst&auml;ndige Liste</span></a> ist verf&uuml;gbar.</p>
 <ul>
   <li class="l1">SlimServer wurde im Angleich an die Produktnamen in SqueezeCenter umbenannt.</li>
   <li class="l1">SqueezeCenter hat eine vollst&auml;ndig neue Standardoberfl&auml;che. Die Einstellungen befinden sich auf einer Seite mit Registerkarten, was das Konfigurieren des Programms erleichtert.  Wenn Sie die &quot;alte&quot; Benutzeroberfl&auml;che von SlimServer 6.5.x bevorzugen, k&ouml;nnen Sie unter <b>http://<i>your server ip</i>:9000/classic</b> auf die Version &quot;Classic&quot; zugreifen.
