--- a/win32/Getting Started.fr.html
+++ b/win32/Getting Started.fr.html
@@ -53,7 +53,7 @@
 
 
 <a NAME="WhatsNew"><p class="p4">Nouveaut&eacute;s de la version 7.0</p></a>
-<p class="p3">Le SqueezeCenter version 7.0 contient des modifications importantes, parmi lesquelles un changement de nom. La liste suivante r&eacute;pertorie les modifications les plus importantes qui ont un impact sur ce que vous voyez &agrave; l'&eacute;cran ou qui permettent d'am&eacute;liorer la mani&egrave;re dont vous utiliser la Squeezebox ou Transporter. Une <a href="http://svn.slimdevices.com/repos/slim/7.0/trunk/server/Changelog7.html"><span class="s2">liste compl&egrave;te</span></a> des modifications est &eacute;galement disponible.</p>
+<p class="p3">Le SqueezeCenter version 7.0 contient des modifications importantes, parmi lesquelles un changement de nom. La liste suivante r&eacute;pertorie les modifications les plus importantes qui ont un impact sur ce que vous voyez &agrave; l'&eacute;cran ou qui permettent d'am&eacute;liorer la mani&egrave;re dont vous utiliser la Squeezebox ou Transporter. Une <a href="http://svn.slimdevices.com/repos/slim/7.0/tags/7.0.1/server/Changelog7.html"><span class="s2">liste compl&egrave;te</span></a> des modifications est &eacute;galement disponible.</p>
 <ul>
   <li class="l1">Le SlimServer a &eacute;t&eacute; renomm&eacute; SqueezeCenter dans un souci de coh&eacute;rence avec le nom du produit.</li>
   <li class="l1">Le SqueezeCenter est dot&eacute; d'une nouvelle interface, qui comprend une page de r&eacute;glages avec des onglets, afin de simplifier la configuration.  Si vous pr&eacute;f&eacute;rez l'ancienne apparence, l'interface du SlimServer 6.5.x a &eacute;t&eacute; renomm&eacute;e Classic et vous pouvez y acc&eacute;der par le biais de l'adresse <b>http://<i>IP du serveur</i>:9000/classic</b>.
