--- a/win32/Getting Started.es.html
+++ b/win32/Getting Started.es.html
@@ -53,7 +53,7 @@
 
 
 <a NAME="WhatsNew"><p class="p4">Novedades en 7.1</p></a>
-<p class="p3">La versi&oacute;n 7.1 de SqueezeCenter contiene cambios importantes, incluido un nombre completamente nuevo. La lista siguiente incluye los cambios clave que afectan a lo que se ve en pantalla, o que cambian o mejoran la interacci&oacute;n con Squeezebox o Transporter. Tambi&eacute;n hay disponible una <a href="http://svn.slimdevices.com/repos/slim/7.1/tags/7.1/server/Changelog7.html"><span class="s2">lista completa</span></a> de cambios.</p>
+<p class="p3">La versi&oacute;n 7.1 de SqueezeCenter contiene cambios importantes, incluido un nombre completamente nuevo. La lista siguiente incluye los cambios clave que afectan a lo que se ve en pantalla, o que cambian o mejoran la interacci&oacute;n con Squeezebox o Transporter. Tambi&eacute;n hay disponible una <a href="http://svn.slimdevices.com/repos/slim/7.1/trunk/server/Changelog7.html"><span class="s2">lista completa</span></a> de cambios.</p>
 
 <ul>
   <li class="l1">El nombre de SlimServer se ha cambiado a SqueezeCenter por coherencia con nuestra nomenclatura de pr&oacute;ximos productos.</li>
