--- a/win32/Getting Started.it.html
+++ b/win32/Getting Started.it.html
@@ -53,7 +53,7 @@
 
 
 <a NAME="WhatsNew"><p class="p4">Novit&agrave; della versione 7.1</p></a>
-<p class="p3">La versione 7.1 di SqueezeCenter presenta notevoli cambiamenti, incluso il nome completamente nuovo! Nell'elenco seguente sono riportate le principali modifiche che incidono sugli elementi visualizzati sullo schermo o determinano un cambiamento/miglioramento del modo di interagire con Squeezebox o Transporter. &Egrave; disponibile anche un <a href="http://svn.slimdevices.com/repos/slim/7.1/tags/7.1/server/Changelog7.html"><span class="s2">elenco completo</span></a> delle modifiche.</p>
+<p class="p3">La versione 7.1 di SqueezeCenter presenta notevoli cambiamenti, incluso il nome completamente nuovo! Nell'elenco seguente sono riportate le principali modifiche che incidono sugli elementi visualizzati sullo schermo o determinano un cambiamento/miglioramento del modo di interagire con Squeezebox o Transporter. &Egrave; disponibile anche un <a href="http://svn.slimdevices.com/repos/slim/7.1/trunk/server/Changelog7.html"><span class="s2">elenco completo</span></a> delle modifiche.</p>
 
 <ul>
   <li class="l1">SlimServer &egrave; stato ridenominato SqueezeCenter per uniformit&agrave; con i nomi dei nostri prodotti futuri.</li>
