--- a/win32/Getting Started.nl.html
+++ b/win32/Getting Started.nl.html
@@ -53,7 +53,7 @@
 
 
 <a NAME="WhatsNew"><p class="p4">Wat is er nieuw in 7.1?</p></a>
-<p class="p3">SqueezeCenter versie 7.1 heeft grootse veranderingen ondergaan, waaronder een gloednieuwe naam! In de volgende lijst staan de belangrijkste veranderingen die van invloed zijn op wat je op je scherm ziet, of die de interactie met je Squeezebox of Transporter veranderen/verbeteren. Er is ook een <a href="http://svn.slimdevices.com/repos/slim/7.1/tags/7.1/server/Changelog7.html"><span class="s2">volledige lijst</span></a> met veranderingen.</p>
+<p class="p3">SqueezeCenter versie 7.1 heeft grootse veranderingen ondergaan, waaronder een gloednieuwe naam! In de volgende lijst staan de belangrijkste veranderingen die van invloed zijn op wat je op je scherm ziet, of die de interactie met je Squeezebox of Transporter veranderen/verbeteren. Er is ook een <a href="http://svn.slimdevices.com/repos/slim/7.1/trunk/server/Changelog7.html"><span class="s2">volledige lijst</span></a> met veranderingen.</p>
 
 <ul>
   <li class="l1">Naam gewijzigd van SlimServer naar SqueezeCenter voor consistentie van onze productnamen in de toekomst.</li>
