--- a/win32/Getting Started.it.html
+++ b/win32/Getting Started.it.html
@@ -53,17 +53,7 @@
 
 
 <a NAME="WhatsNew"><p class="p4">Novit&agrave; della versione 7.1</p></a>
-<p class="p3">La versione 7.1 di SqueezeCenter presenta notevoli cambiamenti, incluso il nome completamente nuovo! Nell'elenco seguente sono riportate le principali modifiche che incidono sugli elementi visualizzati sullo schermo o determinano un cambiamento/miglioramento del modo di interagire con Squeezebox o Transporter. &Egrave; disponibile anche un <a href="http://svn.slimdevices.com/repos/slim/7.1/trunk/server/Changelog7.html"><span class="s2">elenco completo</span></a> delle modifiche.</p>
-
-<ul>
-  <li class="l1">SlimServer &egrave; stato ridenominato SqueezeCenter per uniformit&agrave; con i nomi dei nostri prodotti futuri.</li>
-  <li class="l1">L'interfaccia predefinita di SqueezeCenter &egrave; stata completamente rinnovata e include una pagina delle impostazioni con schede per facilitare l'ottimizzazione  della configurazione.  Se si preferisce l'approccio della &quot;vecchia scuola&quot;, l'interfaccia Web predefinita di SlimServer 6.5.x &egrave; stata ridenominata &quot;Classic&quot; ed &egrave; possibile accedervi tramite <b>http://<i>IP del server</i>:9000/classic</b>.
-  <li class="l1">SqueezeNetwork &egrave; stato integrato in SqueezeCenter eliminando la necessit&agrave; di passare da uno all'altro per accedere ai servizi basati su Internet o alla raccolta musicale locale.  Ora &egrave; possibile accedere direttamente ai servizi quali Pandora Radio, Rhapsody e Slacker Radio dalle Squeezebox o dai Transporter collegati a SqueezeCenter. </li>
-  <li class="l1">La sincronizzazione di pi&ugrave; Squeezebox e Transporter &egrave; stata interamente rinnovata e migliorata.</li>
-  <li class="l1">&Egrave; stato aggiunto il supporto dei dispositivi basati su SqueezeOS.  In passato si faceva riferimento a SqueezeOS come &quot;piattaforma software Jive&quot;.</li>
-  <li class="l1">L'architettura dei plugin &egrave; stata rinnovata per offrire un'interfaccia pi&ugrave; potente e uniforme.  In conseguenza di tale rinnovamento, gli autori dei plugin per l'architettura di SlimServer 6.5.x devono aggiornarli per renderli compatibili con SqueezeCenter.  Per informazioni dettagliate sui plugin di SqueezeCenter, visitare il seguente <a href="http://wiki.slimdevices.com/index.php/SqueezeCenter_Plugins"><span class="s2">sito web</span></a>.</li>
-</ul>
-
+<p class="p3">&Egrave; disponibile anche un <a href="http://svn.slimdevices.com/repos/slim/7.1/tags/7.1/server/Changelog7.html"><span class="s2">elenco completo</span></a> delle modifiche.</p>
 
 <a NAME="ServiceMode"><p class="p4">Esecuzione di SqueezeCenter come servizio</a></p>
 <p class="p3">Per impostazione predefinita SqueezeCenter viene eseguito ora in modalit&agrave; applicazione e viene avviato quando si accede a Windows.  Ci&ograve; consente a SqueezeCenter di accedere alla libreria di iTunes, alle cartelle condivise o alle unit&agrave; di rete senza modificare alcuna attivit&agrave;.  Per eseguire SqueezeCenter come servizio in background di Windows &egrave; necessario eseguire l'<b>Attivatore dei servizi SqueezeCenter</b>.  Dal menu Start di Windows selezionare SqueezeCenter e quindi <b>Gestione avvio</b>.</p>
