Fix typo in forums link
git-svn-id: file:///home/awy/mirror/slim/7.1/trunk/platforms@22168 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/win32/Getting Started.fr.html
+++ b/win32/Getting Started.fr.html
@@ -40,7 +40,7 @@
   <li class="l1"><span class="s1"><a href="#iTunes">Informations sur iTunes</a></span></li>
   <li class="l2"><span class="s1"><a href="#Streaming">Diffusion de musique sur Internet</a></span></li>
 </ul>
-<p class="p3">Si vous avez des questions ou en cas de probl&egrave;me, reportez-vous &agrave; l'interface Web du SqueezeCenter, consultez les <a href="http://slimdevices.custhelp.com/cgi-bin/slimdevices.cfg/php/enduser/std_alp.php"><span class="s2">Questions fr&eacute;quentes</span></a>, rendez-vous sur les forums utilisateurs &agrave; l'adresse <a href="http://forums.slimdevices.com/"><span class="s2">http://forum.slimdevices.com/</span></a> ou contactez le support technique &agrave; l'adresse suivante: <a href="mailto:support@slimdevices.com"><span class="s2">support@slimdevices.com</span></a>.</p>
+<p class="p3">Si vous avez des questions ou en cas de probl&egrave;me, reportez-vous &agrave; l'interface Web du SqueezeCenter, consultez les <a href="http://slimdevices.custhelp.com/cgi-bin/slimdevices.cfg/php/enduser/std_alp.php"><span class="s2">Questions fr&eacute;quentes</span></a>, rendez-vous sur les forums utilisateurs &agrave; l'adresse <a href="http://forums.slimdevices.com/"><span class="s2">http://forums.slimdevices.com/</span></a> ou contactez le support technique &agrave; l'adresse suivante: <a href="mailto:support@slimdevices.com"><span class="s2">support@slimdevices.com</span></a>.</p>
 <p class="p3">Merci.</p>
 <p class="p3">L'&eacute;quipe des syst&egrave;mes multim&eacute;dia de diffusion Logitech</p>
 
