--- a/win32/Getting Started.html
+++ b/win32/Getting Started.html
@@ -40,7 +40,7 @@
   <li class="l1"><span class="s1"><a href="#iTunes">iTunes Information</a></span></li>
   <li class="l2"><span class="s1"><a href="#Streaming">Streaming Playback via the Internet</a></span></li>
 </ul>
-<p class="p3">If you have any questions or problems, please refer to SqueezeCenter web interface, or view the <a href="http://slimdevices.custhelp.com/cgi-bin/slimdevices.cfg/php/enduser/std_alp.php"><span class="s2">FAQ</span></a>, visit our user forum at <a href="http://forums.slimdevices.com/"><span class="s2">http://forum.slimdevices.com/</span></a> or contact our tech support team at <a href="mailto:support@slimdevices.com"><span class="s2">support@slimdevices.com</span></a>.</p>
+<p class="p3">If you have any questions or problems, please refer to SqueezeCenter web interface, or view the <a href="http://slimdevices.custhelp.com/cgi-bin/slimdevices.cfg/php/enduser/std_alp.php"><span class="s2">FAQ</span></a>, visit our user forum at <a href="http://forums.slimdevices.com/"><span class="s2">http://forums.slimdevices.com/</span></a> or contact our tech support team at <a href="mailto:support@slimdevices.com"><span class="s2">support@slimdevices.com</span></a>.</p>
 <p class="p3">Thanks,</p>
 <p class="p3">The Logitech Streaming Media Systems Team</p>
 
