--- a/win32/Getting Started.it.html
+++ b/win32/Getting Started.it.html
@@ -40,7 +40,7 @@
   <li class="l1"><span class="s1"><a href="#iTunes">Informazioni su iTunes</a></span></li>
   <li class="l2"><span class="s1"><a href="#Streaming">Riproduzione di flusso tramite Internet</a></span></li>
 </ul>
-<p class="p3">In caso di quesiti o problemi, fare riferimento all'interfaccia Web di SqueezeCenter oppure esaminare le <a href="http://slimdevices.custhelp.com/cgi-bin/slimdevices.cfg/php/enduser/std_alp.php"><span class="s2">Domande frequenti</span></a>, visitare il forum utenti all'indirizzo <a href="http://forums.slimdevices.com/"><span class="s2">http://forum.slimdevices.com/</span></a> o contattare il personale responsabile dell'assistenza tecnica all'indirizzo <a href="mailto:support@slimdevices.com"><span class="s2">support@slimdevices.com</span></a>.</p>
+<p class="p3">In caso di quesiti o problemi, fare riferimento all'interfaccia Web di SqueezeCenter oppure esaminare le <a href="http://slimdevices.custhelp.com/cgi-bin/slimdevices.cfg/php/enduser/std_alp.php"><span class="s2">Domande frequenti</span></a>, visitare il forum utenti all'indirizzo <a href="http://forums.slimdevices.com/"><span class="s2">http://forums.slimdevices.com/</span></a> o contattare il personale responsabile dell'assistenza tecnica all'indirizzo <a href="mailto:support@slimdevices.com"><span class="s2">support@slimdevices.com</span></a>.</p>
 <p class="p3">Grazie,</p>
 <p class="p3">Team responsabile dei sistemi multimediali di flusso Logitech</p>
 
