update link to release notes
Bug: 9727
git-svn-id: file:///home/awy/mirror/slim/7.3/trunk/platforms@23933 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/win32/Getting Started.html
+++ b/win32/Getting Started.html
@@ -53,7 +53,7 @@
 
 <a NAME="WhatsNew"><p class="p4">What's New in 7.3</p></a>
 <ul>
-	<li class="l1">See the <a href="http://wiki.slimdevices.com/index.php/7.3_Release_Notes">list</a> of addressed issues.</li>
+	<li class="l1">See the <a href="http://wiki.slimdevices.com/index.php/Release_Notes">list</a> of addressed issues.</li>
 </ul>
 
 <a NAME="ServiceMode"><p class="p4">Running SqueezeCenter as a Service</a></p>
