--- a/osx/Getting Started.es.html
+++ b/osx/Getting Started.es.html
@@ -55,7 +55,7 @@
 <p class="p3">La informaci&oacute;n sobre el uso de SqueezeCenter est&aacute; disponible en SqueezeCenter: seleccione el icono de ayuda situado en la esquina inferior izquierda de la interfaz Web.</p>
 
 <a NAME="WhatsNew"><p class="p4">Novedades en 7.3</p></a>
-<p class="p3">Tambi&eacute;n hay disponible una <a href="http://wiki.slimdevices.com/index.php/7.3_Release_Notes"><span class="s2">lista</span></a> de cambios.</p>
+<p class="p3">Tambi&eacute;n hay disponible una <a href="http://wiki.slimdevices.com/index.php/Release_Notes"><span class="s2">lista</span></a> de cambios.</p>
 
 
 
