--- a/osx/Getting Started.it.html
+++ b/osx/Getting Started.it.html
@@ -56,7 +56,7 @@
 
 
 <a NAME="WhatsNew"><p class="p4">Novit&agrave; della versione 7.3</p></a>
-<p class="p3">&Egrave; disponibile anche un <a href="http://wiki.slimdevices.com/index.php/7.3_Release_Notes"><span class="s2">elenco</span></a> delle modifiche.</p>
+<p class="p3">&Egrave; disponibile anche un <a href="http://wiki.slimdevices.com/index.php/Release_Notes"><span class="s2">elenco</span></a> delle modifiche.</p>
 
 
 
