--- a/win32/Getting Started.de.html
+++ b/win32/Getting Started.de.html
@@ -55,7 +55,7 @@
 
 
 <a NAME="WhatsNew"><p class="p4">Neue Funktionen in 7.3</p></a>
-<p class="p3">Eine <a href="http://wiki.slimdevices.com/index.php/7.3_Release_Notes"><span class="s2">Liste</span></a> ist verf&uuml;gbar.</p>
+<p class="p3">Eine <a href="http://wiki.slimdevices.com/index.php/Release_Notes"><span class="s2">Liste</span></a> ist verf&uuml;gbar.</p>
 
 
 
