--- a/win32/Getting Started.es.html
+++ b/win32/Getting Started.es.html
@@ -55,7 +55,7 @@
 
 
 <a NAME="WhatsNew"><p class="p4">Novedades en 7.3</p></a>
-<p class="p3">Tambi&eacute;n hay disponible una <a href="http://wiki.slimdevices.com/index.php/7.3_Release_Notes"><span class="s2">lista</span></a> de cambios.</p>
+<p class="p3">Tambi&eacute;n hay disponible una <a href="http://wiki.slimdevices.com/index.php/Release_Notes"><span class="s2">lista</span></a> de cambios.</p>
 
 
 
