--- a/win32/Getting Started.fr.html
+++ b/win32/Getting Started.fr.html
@@ -55,7 +55,7 @@
 
 
 <a NAME="WhatsNew"><p class="p4">Nouveaut&eacute;s de la version 7.3</p></a>
-<p class="p3">Une <a href="http://wiki.slimdevices.com/index.php/7.3_Release_Notes"><span class="s2">liste</span></a> des modifications est &eacute;galement disponible.</p>
+<p class="p3">Une <a href="http://wiki.slimdevices.com/index.php/Release_Notes"><span class="s2">liste</span></a> des modifications est &eacute;galement disponible.</p>
 
 
 
