--- a/win32/Getting Started.nl.html
+++ b/win32/Getting Started.nl.html
@@ -55,7 +55,7 @@
 
 
 <a NAME="WhatsNew"><p class="p4">Wat is er nieuw in 7.3?</p></a>
-<p class="p3">Er is ook een <a href="http://wiki.slimdevices.com/index.php/7.3_Release_Notes"><span class="s2">volledige lijst</span></a> met veranderingen.</p>
+<p class="p3">Er is ook een <a href="http://wiki.slimdevices.com/index.php/Release_Notes"><span class="s2">volledige lijst</span></a> met veranderingen.</p>
 
 
 
